fix: menu bar icon overflow, style

--- a/src/tilemenu.css
+++ b/src/tilemenu.css
@@ -158,23 +158,26 @@ BODY {
 	color:white;
 }
 #menuBar {
-	height:24px;
+	/*height:24px;*/
 	user-select: none; 
 	-moz-user-select: none;
 	text-align:right;
 	cursor:grab;
+	overflow: hidden;
+	/*white-space: nowrap;*/
+	padding: 4px;
 }
 [data-menu="searchbar"] #menuBar {
 	cursor:default;
 }
 
 #menuBar > .tool {
-	background-size:20px;
-	height:20px;
-	width:20px;
+	background-size:16px;
+	height:16px;
+	width:16px;
 	display:inline-block;
-	vertical-align:top;
-	margin-top:4px;
+	vertical-align:middle;
+	/*margin-top:4px;*/
 	cursor:default;
 }
 #searchBarContainer {
